2014-03-01  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* configure.ac: Rename from configure.in

	* configure.in: Set version to 2.7.90

2014-01-01  Martin A. Godisch  <martin@godisch.de>

	* config.c: Fixed text width in history buffer message box
	  (Debian #470582).

	* minicom.1: Properly escaped dashes in manual page.

2013-12-31  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* NEWS: Updates for 2.7

	* configure.in: Set version to 2.7

2013-12-08  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/minicom.src, src/minicom.h, src/updown.c: Enlarge scr_name
	  variable. By Krzysztof Sywula.

2013-10-30  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* autogen.sh: Use version 1.14

	* configure.in: Add AM_PROG_AR, Gentoo bug #489734

2013-10-29  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/script.c, man/runscript.1: Add binary transmission feature
	  by Tobias Schlager.

2013-08-03  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* autogen.sh: Update to 1.13

	* man/minicom.1, src/minicom.c: Improve manpage, and --help
	  to option output. By Jaromir Capik, #314342

2013-05-09  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/config.c, src/dial.c, src/main.c, src/minicom.c,
	  src/minicom.h: make statusline configurable, remove -T option.

	* src/main.c: Improve display of device path with -T option.

	* man/minicom.1: Update docs for -T option.

2013-02-12  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* po/zh_TW.po: Update from Translation team.

2013-02-07  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/main.c, src/minicom.h, src/updown.c:
	  [#314018] [PATCH] Disabling lockfile warnings when the
	  device disappears (ttyUSB hot-unplug), by  Jaromir Capik

2013-02-06  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* NEWS: Release 2.6.2

2013-02-04  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* po/zh_TW.po: Update from Translation Project.

2013-01-27  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>
